--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConfirmarMenu"></activity>
+        <activity android:name=".NuevoProveedor"></activity>
+        <activity android:name=".NuevosProveedores" />
+        <activity android:name=".ListadoProveedor" />
+        <activity android:name=".ConfirmarMenu" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
